--- a/src/app/auth/component/mail-confirm/mail-confirm.component.html
+++ b/src/app/auth/component/mail-confirm/mail-confirm.component.html
@@ -1,51 +1,54 @@
-<div
-  class="d-flex justify-content-center align-items-center container"
-  dir="rtl"
->
-  <div class="card py-5 px-3">
-    <h5 class="mb-1" id="succ"> </h5>
-    <h5 class="mb-1">تفعيل الايميل</h5>
-    <span class="mobile-text">برجاء ادخال كود التفعيل المرسل على الايميل </span>
-    <form action="" [formGroup]="confirmCode">
-    <div class="d-flex flex-row mt-5">
-      <input type="text" dir="ltr" class="form-control" formControlName="token"  name="token"/>
-      <div id="code"></div>
-      <div
-      class="alert alert-danger"
-      role="alert"
-      *ngIf="
-      confirmCode.controls['token'].errors &&
-      confirmCode.controls['token'].touched
-      "
-    >
-      <strong
-        *ngIf="
-        confirmCode.controls['token'].errors &&
-        confirmCode.controls['token'].errors['required']
-        "
-        >من فضلك ادخل الكود</strong
-      >
-      <strong
-        *ngIf="confirmCode.controls['token'].errors['minlength']"
-        >كود التفعيل فقط 6 ارقام</strong
-      >
+<section class=" gradient-form">
+  <div class="container py-5 h-100">
+    <!-- <div class="alert alert-danger text-center" role="alert" *ngIf="errMsg.error">
 
-      <strong
-        *ngIf="confirmCode.controls['token'].errors['maxlength']"
-        >كود التفعيل فقط 6 ارقام</strong
-      >
-      <strong
-        *ngIf="confirmCode.controls['token'].errors['pattern']"
-        >الرقم غير صحيح</strong
-      >
+        Invalid Email or Password.
+      </div> -->
+    <div class="row align-items-center justify-content-center g-0 h-100">
+      <div class="col-xl-10">
+        <section class="card  text-black">
+          <div class="row justify-content-center g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
+
+
+                    <h5 class="mb-1" id="succ"> </h5>
+                    <h3 class="mb-1">تفعيل البريدالالكترونى </h3>
+                    <span class="mobile-text">برجاء ادخال كود التفعيل المرسل على البريدالالكترونى</span>
+                    <form action="" [formGroup]="confirmCode">
+                      <div class="d-flex flex-row mt-5">
+                        <input type="text" dir="ltr" class="form-control" formControlName="token" name="token" />
+                        <div id="code"></div>
+
+
+                      </div>
+                      <div class="alert alert-danger" role="alert" *ngIf="
+                            confirmCode.controls['token'].errors &&
+                                confirmCode.controls['token'].touched
+                                ">
+                        <strong *ngIf="
+      confirmCode.controls['token'].errors &&
+      confirmCode.controls['token'].errors['required']
+      ">من فضلك ادخل الكود</strong>
+                        <strong *ngIf="confirmCode.controls['token'].errors['minlength']">كود التفعيل خاطئ                   </strong>
+
+                        <strong *ngIf="confirmCode.controls['token'].errors['maxlength']">كود التفعيل خاطئ</strong>
+                        <strong *ngIf="confirmCode.controls['token'].errors['pattern']">الرقم غير صحيح</strong>
+                      </div>
+                      <div class="text-center mt-5">
+                        <input class="btn-dark btn" type="submit" value="submit" [disabled]="confirmCode?.invalid"
+                          (click)="onsubmit()" />
+                      </div>
+                    </form>
+
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </div>
-    </div>
-    <div class="text-center mt-5">
-      <input class="send" type="submit" value="submit" [disabled]="confirmCode?.invalid" (click)="onsubmit()" />
-    </div>
-  </form>
   </div>
-</div>
+</section>
 {{confirmCode.value | json}}
 {{confirmCode.status | json}}
 <!-- ---------------------------- -->
