--- a/src/app/auth/component/login/login.component.css
+++ b/src/app/auth/component/login/login.component.css
@@ -1,75 +1,34 @@
-html,
-body {
-  height: 100%;
-}
+.gradient-custom-2 {
 
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
+  background-color: #F05454;
 
-.form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
-}
+  }
+  .header{
+    font-family: cairo;
+    font-weight: 800;
+    font-size: 2rem;
+  }
 
-.form-signin .checkbox {
-  font-weight: 400;
-}
+  .gradient-form{
+    margin-bottom: 15%;
+  }
+  @media (min-width: 768px) {
+    .gradient-form {
+      height: 100vh !important;
+    }
+  }
+  @media (min-width: 769px) {
+    .gradient-custom-2 {
+      border-top-right-radius: .3rem;
+      border-bottom-right-radius: .3rem;
+    }
+  }
 
-.form-signin .form-floating:focus-within {
-  z-index: 2;
-}
+  .bi{
+    font-size: 67px;
+    padding-bottom: 10%;
+    color:rgb(240, 84, 84);
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
+  }
 
-.product-categories ul li a:hover {
-  color: var(--secondColor);
-}
-
-.send{
-  padding: 15px 20px;
-  font-size: 16px;
-  font-weight: 600;
-  border-radius: 20px;
-  background: var(--secondColor);
-  color: #ffff;
-  border:none;
-  text-transform: uppercase;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  background: #FE6F41;
-  caret-color:#FE6F41;
-
-}
-.send:hover {
-  background: #353535;
-  color: #fff;
-}
-
-.hov:hover {
-  background: #FE6F41;
-  color: #FE6F41;
-}
