--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -54,21 +54,21 @@ Page Content
 
         Invalid Email or Password.
       </div> -->
-      <div class="row d-flex justify-content-center align-items-center  h-100">
+      <div class="row  h-100">
         <div class="col-xl-10">
-          <div class="card rounded-3 text-black">
-            <div class="row g-0">
+          <section class="card rounded-3 text-black">
+            <div class="row justify-content-center g-0">
               <div class="col-lg-6">
                 <div class="card-body p-md-5 mx-md-4">
 
                   <div class="text-center">
-                    <h4 class="mt-3 mb-5 pb-1 text-danger">تسجل دخول</h4>
+                    <h4 class="mt-3 mb-5 pb-1 text-danger header">تسجل الدخول</h4>
                   </div>
 
                   <form  [formGroup]="loginForm">
 
                     <div class="form-outline mb-4">
-                      <label class="form-label" for="email">البريد الالكترونى</label>
+                      <label class="form-label d-flex" for="email">البريد الالكترونى</label>
                       <input type="email" class="form-control" dir="ltr"  formControlName="email" name="password" placeholder="البريد الالكترونى"
                         required />
                       <div *ngIf="loginForm.controls['email'].errors && (loginForm.controls['email'].touched)">
@@ -91,25 +91,20 @@ Page Content
 
 
                     <div class="form-outline mb-4">
-                      <label class="form-label" for="password">كلمة المرور</label>
+                      <label class="form-label d-flex" for="password">كلمة المرور</label>
                       <input type="password" class="form-control" formControlName="password" placeholder="كلمة المرور"
                         required name="password" />
                        <div *ngIf="loginForm.controls['password'].errors && (loginForm.controls['password'].touched)">
                         <small class="form-text text-danger "
-                          *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors ['required']">Password
-                          is
-                          requierd</small>
+                          *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors ['required']">برجاء ادخال كلمة المرور</small>
                         <small class="form-text text-danger "
                           *ngIf="loginForm.controls['password'].errors['minlength'] ">
-                          minimum
-                          length is 6 </small>
+                          كلمة المرور لا تقل عن 8 حروف و ارقام </small>
                         <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['pattern']">
-                          Password should be
-                          containe numbers and at least one capital character </small>
+                          يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ، ويجب أن تحتوي على الأقل على حرف كبير واحد ، وحرف صغير واحد ، ورقم واحد ، ورمزا واحد </small>
                         <small class="form-text text-danger "
                           *ngIf="loginForm.controls['password'].errors['maxlength']">
-                          maximum length
-                          is 20</small>
+                          كلمة المرور لا تقل عن 8 حروف و ارقام</small>
                       </div>
                     </div>
                     <div><p id="passwoderror"></p></div>
@@ -126,3 +121,9 @@ Page Content
 
                 </div>
               </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+ </section>
