--- a/src/app/auth/forget-password/forget-password.component.html
+++ b/src/app/auth/forget-password/forget-password.component.html
@@ -5,12 +5,12 @@
     <div class="row d-flex justify-content-center align-items-center  h-100">
       <div class="col-xl-10">
         <div class="card rounded-3 text-black">
-          <div class="row g-0">
+          <div class="row justify-content-center g-0">
             <div class="col-lg-6">
               <div class="card-body p-md-5 mx-md-4">
 
-                <div class="text-center">
-                  <h4 class="mt-3 mb-5 pb-1 text-danger"> من فضلك ادخل بريدك الالكترونى  </h4>
+                <div class="text-center w-100">
+                  <h4 class="mt-3 mb-5 pb-1  text-danger header"> من فضلك ادخل بريدك الالكترونى  </h4>
                 </div>
 
                 <form  >
