--- a/src/app/auth/component/login/login.component.html
+++ b/src/app/auth/component/login/login.component.html
@@ -48,82 +48,83 @@ Page Content
 
 
 
-  <section class="h-100 gradient-form">
-    <div class="container py-5 h-100">
-      <!-- <div class="alert alert-danger text-center" role="alert" *ngIf="errMsg.error">
+<section class="h-100 gradient-form">
+  <div class="container py-5 h-100">
+    <!-- <div class="alert alert-danger text-center" role="alert" *ngIf="errMsg.error">
 
         Invalid Email or Password.
       </div> -->
-      <div class="row  h-100">
-        <div class="col-xl-10">
-          <section class="card rounded-3 text-black">
-            <div class="row justify-content-center g-0">
-              <div class="col-lg-6">
-                <div class="card-body p-md-5 mx-md-4">
+    <div class="row  h-100">
+      <div class="col-xl-10">
+        <section class="card rounded-3 text-black">
+          <div class="row justify-content-center g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
 
-                  <div class="text-center">
-                    <h4 class="mt-3 mb-5 pb-1 text-danger header">تسجل الدخول</h4>
+                <div class="text-center">
+                  <h4 class="mt-3 mb-5 pb-1 text-danger header">تسجل الدخول</h4>
+                </div>
+
+                <form [formGroup]="loginForm">
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label d-flex" for="email">البريد الالكترونى</label>
+                    <input type="email" class="form-control" dir="ltr" formControlName="email" name="password"
+                      placeholder="البريد الالكترونى" required />
+                    <div *ngIf="loginForm.controls['email'].errors && (loginForm.controls['email'].touched)">
+                      <small class="form-text text-danger "
+                        *ngIf="loginForm.controls['email'].errors && loginForm.controls['email'].errors ['required']">برجاء ادخال البريد الالكترونى </small>
+                      <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['minlength'] ">
+                        البريد الالكترونى غير صحيح
+                      </small>
+                      <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['email']">
+                        البريد الالكترونى غير صحيح</small>
+                      <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['maxlength']">
+                        البريد الالكترونى غير صحيح</small>
+                    </div>
+
+                  </div>
+                  <div>
+                    <p id="emailerror"></p>
                   </div>
 
-                  <form  [formGroup]="loginForm">
 
-                    <div class="form-outline mb-4">
-                      <label class="form-label d-flex" for="email">البريد الالكترونى</label>
-                      <input type="email" class="form-control" dir="ltr"  formControlName="email" name="password" placeholder="البريد الالكترونى"
-                        required />
-                      <div *ngIf="loginForm.controls['email'].errors && (loginForm.controls['email'].touched)">
-                        <small class="form-text text-danger "
-                          *ngIf="loginForm.controls['email'].errors && loginForm.controls['email'].errors ['required']">Email
-                          is
-                          requierd</small>
-                        <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['minlength'] ">
-                          minimum
-                          length is 7 </small>
-                        <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['email']">
-                          Email is invalid</small>
-                        <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['maxlength']">
-                          maximum length
-                          is 40</small>
-                      </div>
-
+                  <div class="form-outline mb-4">
+                    <label class="form-label d-flex" for="password">كلمة المرور</label>
+                    <input type="password" class="form-control" formControlName="password" placeholder="كلمة المرور"
+                      required name="password" />
+                    <div *ngIf="loginForm.controls['password'].errors && (loginForm.controls['password'].touched)">
+                      <small class="form-text text-danger "
+                        *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors ['required']">برجاء
+                        ادخال كلمة المرور</small>
+                      <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['minlength'] ">
+                        كلمة المرور لا تقل عن 8 حروف و ارقام </small>
+                      <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['pattern']">
+                        يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ، ويجب أن تحتوي على الأقل على حرف كبير واحد
+                        ، وحرف صغير واحد ، ورقم واحد ، ورمزا واحد </small>
+                      <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['maxlength']">
+                        كلمة المرور لا تقل عن 8 حروف و ارقام</small>
                     </div>
-                    <div><p id="emailerror"></p></div>
+                  </div>
+                  <div>
+                    <p id="passwoderror"></p>
+                  </div>
+                  <app-remmber-me></app-remmber-me>
+                  <div class="pt-1 mb-4">
+                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit"
+                      (click)="login()">تسجيل دخول</button>
+                  </div>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">ليس لدى حساب؟ <a routerLink="/register"
+                      style="color: #393f81;">التسجيل</a></p>
+                  <p><a class="link-dark" routerLink="/forgetpassword">نسيت كلمة المرور</a>
+                  </p>
+                </form>
 
-
-                    <div class="form-outline mb-4">
-                      <label class="form-label d-flex" for="password">كلمة المرور</label>
-                      <input type="password" class="form-control" formControlName="password" placeholder="كلمة المرور"
-                        required name="password" />
-                       <div *ngIf="loginForm.controls['password'].errors && (loginForm.controls['password'].touched)">
-                        <small class="form-text text-danger "
-                          *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors ['required']">برجاء ادخال كلمة المرور</small>
-                        <small class="form-text text-danger "
-                          *ngIf="loginForm.controls['password'].errors['minlength'] ">
-                          كلمة المرور لا تقل عن 8 حروف و ارقام </small>
-                        <small class="form-text text-danger " *ngIf="loginForm.controls['password'].errors['pattern']">
-                          يجب أن تتكون كلمة المرور الخاصة بك من أكثر من 8 أحرف ، ويجب أن تحتوي على الأقل على حرف كبير واحد ، وحرف صغير واحد ، ورقم واحد ، ورمزا واحد </small>
-                        <small class="form-text text-danger "
-                          *ngIf="loginForm.controls['password'].errors['maxlength']">
-                          كلمة المرور لا تقل عن 8 حروف و ارقام</small>
-                      </div>
-                    </div>
-                    <div><p id="passwoderror"></p></div>
-                    <div class="pt-1 mb-4">
-                      <button
-                        class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit" (click)="login()"
-                        >تسجيل دخول</button>
-                    </div>
-                    <p class="mb-5 pb-lg-2" style="color: #393f81;">ليس لدى حساب؟ <a routerLink="/register"
-                        style="color: #393f81;">التسجيل</a></p>
-                      <p><a class="link-dark" routerLink="/forgetpassword">نسيت كلمة المرور</a>
-                      </p>
-                      </form>
-
-                </div>
               </div>
             </div>
-          </section>
-        </div>
+          </div>
+        </section>
       </div>
     </div>
- </section>
+  </div>
+</section>
