--- a/src/app/auth/component/remmber-me/remmber-me.component.html
+++ b/src/app/auth/component/remmber-me/remmber-me.component.html
@@ -1,1 +1,5 @@
-<p>remmber-me works!</p>
+<div>
+
+  <input type="checkbox" name="rememperme" value="" id="remember">
+  <label for="remember">تذكرنى</label>
+</div>
