--- a/src/app/shared/component/cart-details/cart-details.component.html
+++ b/src/app/shared/component/cart-details/cart-details.component.html
@@ -1,129 +1,135 @@
-<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" >
-  <div class="carousel-inner">
-    <div class="carousel-item active"  *ngFor="let image of images let i = index" [ngClass]="{'active': i == 0 }">
-      <img [src]="image.image_name" class="d-block w-100" alt="...">
-    </div>
-  
-  </div>
-  <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only ">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </button>
-
-</div>
-
-
-<mat-card class="mt-2 mx-2">
-  <div class="d-flex flex-row" *ngIf="data.reviews_num>0">
-    <mat-icon style="font-size:large;">star</mat-icon>
-    <p>{{data.reviews_avg}}</p><p>({{data.reviews_num}}) تقييمات</p>
-  </div>
-  <mat-card-title>{{data.title}}</mat-card-title>
-  <h2>{{data.price}}جنيه</h2>
-
-  <mat-card-actions>
-    <div class="container">
-      <div class="row mb-3">
-        <div class="col-xs-12 col-md-4 ">
-
-          <span class="material-icons   mx-3 ">bed</span> <span>عدد الغرف : {{data.bedroom_num}}</span>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <span class="material-icons  mx-3">bathtub</span><span>عدد حمامات : {{data.bathroom_num}}</span>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <span class="material-icons  mx-3 ">location_on</span> <span>العنوان : {{data.address}}-{{data.area}}</span>
-        </div>
+<div *ngIf="!loading">
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" >
+    <div class="carousel-inner">
+      <div class="carousel-item active"  *ngFor="let image of images let i = index" [ngClass]="{'active': i == 0 }">
+        <img [src]="image.image_name" class="d-block w-100" alt="...">
       </div>
-
+    
     </div>
-  </mat-card-actions>
-  <div class="">
-    <h2>تفاصيل العقار :</h2>
-    <div >
-        <h3>عدد السرائر :{{data.beds_num}}</h3>
-        <h3>مفروش  :{{data.furniture}}</h3>
-        <h3>الطابق : {{data.level}}</h3>
-        <p>الوصف : {{data.description}}</p>
-
-    </div>
-
-  </div>
-</mat-card>
-
-
-
-  <div class="container mt-5  mx-2">
-    <div class="row">
-      
-  
-      <div class="col-xs-12 col-sm-3 col-md-3 text-center ">
-        <img [src]="data.user.image" class="rounded-circle  img-fluid" alt="...">
-  
-      </div>
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <mat-list role="list " class="mt-4">
-          <mat-list-item role="listitem"><h3 class="text-bold">المالك </h3></mat-list-item>
-          <mat-list-item role="listitem">{{data.user.name}}</mat-list-item>
-          <mat-list-item role="listitem">{{data.user.phone}}</mat-list-item>
-          <mat-list-item role="listitem">{{data.user.email}}</mat-list-item>
-
-          <mat-list-item role="listitem" *ngIf="data.advertisement_num>1"><a routerLink="">{{data.advertisement_num}} عقارات </a></mat-list-item>
-  
-        </mat-list>
-      </div>
-    </div>
-  </div>
-  <div class="mt-5 mx-2" id="comments">
-    <app-comments [adverId]="adverId" [reviews]="review"></app-comments>
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleFade" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only ">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleFade" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </button>
   
   </div>
-<div class="container  mt-5" *ngIf=" suggestion.length>0">
-  <mat-card-title>مقترحات أخرى قد تعجبك :</mat-card-title>
-
-<div class="row flex-row flex-nowrap row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 wrapper" style="overflow-x: auto;">
-  <div class=" col " *ngFor="let item of suggestion " >
-    <div class="suggestion" routerLink="/details/{{item.id}}">
-      <img [src]="item.advertisement_image[0].image_name"  height="150px" class="card-img-top" alt="{{item.advertisement_image[0].image_name}}">
-      <div class="card-body">
-        <div class="container">
-          <div class="row ">
   
-            <div class="col " > 
-              <div class="d-flex flex-row justify-content-between">
-                   
-                    <p class="mb-2 text-muted">{{item.type}}</p>
-                    <div class="d-flex flex-row">
-                      <mat-icon style="font-size:large;">star</mat-icon>
-                      <p >{{item.ratings_avg_count}}</p><p>({{item.ratings_count}})</p>
-                    </div>
-                    
-              </div>
-              <h3 class="mb-0">{{item.title}}</h3>
-              <h3 class="mb-0">{{item.price}}جنيه</h3>
-              <div class="d-flex justify-content-between align-items-center ">
-                <small class="text-muted"> <span class="material-icons   ">location_on</span> {{item.address}}</small>
-              </div>
-              
-            </div>
+  
+  <mat-card class="mt-2 mx-2">
+    <div class="d-flex flex-row" *ngIf="data.reviews_num>0">
+      <mat-icon style="font-size:large;">star</mat-icon>
+      <p>{{data.reviews_avg}}</p><p>({{data.reviews_num}}) تقييمات</p>
+    </div>
+    <mat-card-title>{{data.title}}</mat-card-title>
+    <h2>{{data.price}}جنيه</h2>
+  
+    <mat-card-actions>
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col-xs-12 col-md-4 ">
+  
+            <span class="material-icons   mx-3 ">bed</span> <span>عدد الغرف : {{data.bedroom_num}}</span>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <span class="material-icons  mx-3">bathtub</span><span>عدد حمامات : {{data.bathroom_num}}</span>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <span class="material-icons  mx-3 ">location_on</span> <span>العنوان : {{data.address}}-{{data.area}}</span>
           </div>
         </div>
+  
+      </div>
+    </mat-card-actions>
+    <div class="">
+      <h2>تفاصيل العقار :</h2>
+      <div class="mx-3">
+          <h3>عدد السرائر :{{data.beds_num}}</h3>
+          <h3>مفروش  :{{data.furniture}}</h3>
+          <h3>الطابق : {{data.level}}</h3>
+          <p>الوصف : {{data.description}}</p>
+  
+      </div>
+  
+    </div>
+  </mat-card>
+  
+  
+  
+    <div class="container mt-5  mx-2">
+      <div class="row">
         
+    
+        <div class="col-xs-12 col-sm-3 col-md-3 text-center ">
+          <img [src]="data.user.image" class="rounded-circle  img-fluid" alt="...">
+    
+        </div>
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <mat-list role="list " class="mt-4">
+            <mat-list-item role="listitem"><h3 class="text-bold">المالك </h3></mat-list-item>
+            <mat-list-item role="listitem">{{data.user.name}}</mat-list-item>
+            <mat-list-item role="listitem">{{data.user.phone}}</mat-list-item>
+            <mat-list-item role="listitem">{{data.user.email}}</mat-list-item>
+  
+            <mat-list-item role="listitem" *ngIf="data.advertisement_num>1"><a routerLink="">{{data.advertisement_num}} عقارات </a></mat-list-item>
+    
+          </mat-list>
+        </div>
       </div>
     </div>
+    <div class="mt-5 mx-2" id="comments">
+      <app-comments [adverId]="adverId" [reviews]="review"></app-comments>
+    
+    </div>
+  <div class="container  mt-5" *ngIf=" suggestion.length>0">
+    <mat-card-title>مقترحات أخرى قد تعجبك :</mat-card-title>
+  
+  <div class="row flex-row flex-nowrap row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 wrapper" style="overflow-x: auto;">
+    <div class=" col " *ngFor="let item of suggestion " >
+      <div class="suggestion" routerLink="/details/{{item.id}}">
+        <img [src]="item.advertisement_image[0].image_name"  height="150px" class="card-img-top" alt="{{item.advertisement_image[0].image_name}}">
+        <div class="card-body">
+          <div class="container">
+            <div class="row ">
+    
+              <div class="col " > 
+                <div class="d-flex flex-row justify-content-between">
+                     
+                      <p class="mb-2 text-muted">{{item.type}}</p>
+                      <div class="d-flex flex-row">
+                        <mat-icon style="font-size:large;">star</mat-icon>
+                        <p >{{item.ratings_avg_count}}</p><p>({{item.ratings_count}})</p>
+                      </div>
+                      
+                </div>
+                <h3 class="mb-0">{{item.title}}</h3>
+                <h3 class="mb-0">{{item.price}}جنيه</h3>
+                <div class="d-flex justify-content-between align-items-center ">
+                  <small class="text-muted"> <span class="material-icons   ">location_on</span> {{item.address}}</small>
+                </div>
+                
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+     
+    </div>
+      
+     
    
   </div>
-    
-   
- 
+  </div>
+  
+  
+  
+  
+  <app-footer></app-footer>
 </div>
+<div class="justify-content-center align-items-center" *ngIf="loading">
+  <mat-spinner class="text-center w-50  mt-5 pt-5 "></mat-spinner>
+
 </div>
-
-
-
-
-<app-footer></app-footer>
