--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,18 @@
 
-<!-- <app-sidebar> </app-sidebar> -->
-<!-- <app-search> </app-search> -->
-
 <div *ngIf="!loading">
   <app-search> </app-search>
 
   <div class="album py-5 ">
     <div class="container">
-<<<<<<< HEAD
-=======
-
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
-
-
-
->>>>>>> 9751dead1e4152e50868e2590c4e99b2c55b9270
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
 
-<<<<<<< HEAD
         <div class="col " *ngFor="let item of allAdvert | paginate: { itemsPerPage: 9,totalItems:totalNumber, currentPage: page }">
         <app-cart [advertisment]="item" > </app-cart>
 
-   
       </div>
     </div> 
        
     </div>
-<<<<<<< HEAD
     <pagination-controls previousLabel="السابق" nextLabel="التالي" class="text-center" (pageChange)="page = $event" *ngIf="totalNumber>9"></pagination-controls>
 
   </div> 
@@ -36,15 +21,6 @@
   
 </div>
 <div class="justify-content-center align-items-center" *ngIf="loading">
-  <mat-spinner class="text-center w-50  mt-5 pt-5 "></mat-spinner>
+  <mat-spinner class="text-center w-50  mt-5 pt-5 " style="top: 30px;"></mat-spinner>
 
 </div>
-
-
-  
-=======
-  </div>
-
-  <app-footer> </app-footer>
->>>>>>> 9751dead1e4152e50868e2590c4e99b2c55b9270
-
