--- a/src/app/shared/component/footer/footer.component.html
+++ b/src/app/shared/component/footer/footer.component.html
@@ -1,7 +1,7 @@
 
   
 
-<div class="container ">
+<div class="container mt-5 ">
 
   <footer class="text-white text-center text-lg-start" >
     <!-- Grid container -->
