--- a/src/app/shared/component/search/search.component.html
+++ b/src/app/shared/component/search/search.component.html
@@ -36,7 +36,7 @@
       <div class=" col d-flex justify-content-center m-2">
         <button mat-raised-button>بحث <mat-icon class="field-icon">search</mat-icon> </button>
       </div>
-      <div class="col d-flex justify-content-center m-2" (click)="clearFilters()">
+      <div class="col d-flex justify-content-center m-2" >
         <button mat-raised-button>مسح<mat-icon class="field-icon">filter_alt</mat-icon> </button>
       </div>
   
