--- a/src/app/auth/forget-password/forget-password.component.html
+++ b/src/app/auth/forget-password/forget-password.component.html
@@ -13,35 +13,34 @@
                   <h4 class="mt-3 mb-5 pb-1  text-danger header"> من فضلك ادخل بريدك الالكترونى  </h4>
                 </div>
 
-                <form  >
+                <form [formGroup]="forgetpassword" >
 
                   <div class="form-outline mb-4">
                     <label class="form-label" for="email">البريد الالكترونى</label>
                     <input type="email" class="form-control" dir="ltr"  formControlName="email" name="password" placeholder="البريد الالكترونى"
                       required />
-                    <!-- <div *ngIf="loginForm.controls['email'].errors && (loginForm.controls['email'].touched)">
+                    <div *ngIf="forgetpassword.controls['email'].errors && (forgetpassword.controls['email'].touched)">
                       <small class="form-text text-danger "
-                        *ngIf="loginForm.controls['email'].errors && loginForm.controls['email'].errors ['required']">Email
-                        is
-                        requierd</small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['minlength'] ">
+                        *ngIf="forgetpassword.controls['email'].errors && forgetpassword.controls['email'].errors ['required']">Email
+                        برجاء ادخال البريد الالكترونى</small>
+                      <small class="form-text text-danger " *ngIf="forgetpassword.controls['email'].errors['minlength'] ">
                         minimum
                         length is 7 </small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['email']">
-                        Email is invalid</small>
-                      <small class="form-text text-danger " *ngIf="loginForm.controls['email'].errors['maxlength']">
+                      <small class="form-text text-danger " *ngIf="forgetpassword.controls['email'].errors['email']">
+                        البريد الالكترونى غير صحيح</small>
+                      <small class="form-text text-danger " *ngIf="forgetpassword.controls['email'].errors['maxlength']">
                         maximum length
                         is 40</small>
-                    </div> -->
+                    </div>
 
                   </div>
-                  <div><p id="emailerror"></p></div>
+                  <div><p id="emailerror"> {{mail}}</p></div>
 
 
 
                   <div class="pt-1 mb-4">
                     <button
-                      class="btn btn-dark btn-block fa-lg gradient-custom-2 mb-3" type="submit"
+                      class="btn btn-dark btn-block fa-lg gradient-custom-2 mb-3" type="submit" (click)="sendEmail()"
                       > ارسال</button>
                   </div>
 
