--- a/src/app/auth/component/reset-password/reset-password.component.html
+++ b/src/app/auth/component/reset-password/reset-password.component.html
@@ -19,7 +19,7 @@
                     <div>
                   <div class="form-outline mb-4">
                     <label class="form-label d-flex" for="password">كلمة المرور</label>
-                    <input type="password" class="form-control" formControlName="password" placeholder="كلمة المرور"
+                    <input type="password" class="form-control" #confirm formControlName="password" placeholder="كلمة المرور"
                       required name="password" />
                     <div *ngIf="loginForm.controls['password'].errors && (loginForm.controls['password'].touched)">
                       <small class="form-text text-danger "
@@ -36,7 +36,7 @@
                   </div>
                   <div class="form-outline mb-4">
                     <label class="form-label d-flex" for="password">تاكيد كلمة المرور</label>
-                    <input type="password" class="form-control" formControlName="password_confirmation" placeholder="كلمة المرور"
+                    <input type="password" class="form-control" #pass formControlName="password_confirmation" placeholder="كلمة المرور"
                       required name="password" />
                     <div *ngIf="loginForm.controls['password_confirmation'].errors && (loginForm.controls['password_confirmation'].touched)">
                       <small class="form-text text-danger "
@@ -50,14 +50,20 @@
                       <small class="form-text text-danger " *ngIf="loginForm.controls['password_confirmation'].errors['maxlength']">
                         كلمة المرور لا تقل عن 8 حروف و ارقام</small>
                     </div>
+                    <div>
+                      <small class="form-text text-danger " *ngIf="passwordNotMatch == true">
+                        تاكيد كلمة المرور غير مشابة لكلمة المرور</small>
+                    </div>
                   </div>
                     <!-- <p id="passwoderror"></p> -->
-                    <p id="passwoderror">{{passwoderror}}</p>
+                    <!-- <p id="passwoderror">{{passwoderror}}</p> -->
                   </div>
-                 <div class="pt-1 mb-4">
+                  <div class="pt-1 mb-4">
                     <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit"
-                      (click)="submit()">ارسال </button>
+                    (click)="submit()">ارسال </button>
                   </div>
+                  {{loginForm.status|json}}
+                  {{passwordNotMatch}}
 
                 </form>
 
