--- a/src/app/shared/component/cart-details/cart-details.component.css
+++ b/src/app/shared/component/cart-details/cart-details.component.css
@@ -24,6 +24,10 @@
    background-color:#FE6F41;
 
 }
+.payment{
+  background-color:#FE6F41;
+
+}
 
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
