--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,47 +1,39 @@
+<mat-toolbar class=" fixed-top">
 
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light ">
 
- <mat-toolbar class=" fixed-top">
-
-        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light ">
-
-          <div class="container-fluid">
+        <div class="container-fluid">
 
             <a class="navbar-brand" routerLink="home">سكن</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="تبديل التنقل">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link " aria-current="page" routerLink="home">الصفحة الرئيسية</a>
-                </li>
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" routerLink="home">الصفحة الرئيسية</a>
+                    </li>
 
-                <li class="nav-item">
-                  <a class="nav-link " aria-current="page" routerLink="home">التعريف</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link "><mat-icon matBadge="15"  matBadgeColor="warn">notifications</mat-icon></a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" routerLink="home">التعريف</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link ">
+                            <mat-icon matBadge={{count_of_notification}} matBadgeColor="warn" (click)="get_notification()">notifications</mat-icon>
+                        </a>
+                    </li>
 
-              </ul>
-              <div class="d-flex">
-                <button class="btn mx-1" routerLink="register">تسجيل </button>
-                <button class="btn mx-1" routerLink="login"> دخول</button>
-                <button class="btn mx-1" (click)="logout()">خروج</button>
+                </ul>
+                <div class="d-flex">
+                    <button class="btn mx-1" routerLink="register">تسجيل </button>
+                    <button class="btn mx-1" routerLink="login"> دخول</button>
+                    <button class="btn mx-1" (click)="logout()">خروج</button>
 
-              </div>
+                </div>
             </div>
-          </div>
-        </nav>
+        </div>
+    </nav>
 
 
 
-  </mat-toolbar>
-
-
-
-
-
-
-
-
+</mat-toolbar>
