--- a/src/app/components/add-properity/add-properity.component.html
+++ b/src/app/components/add-properity/add-properity.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="container mt-5">
-  <form dir="rtl" class="w-100" formGroup="addproperity" >
+  <form dir="rtl" class="w-100" [formGroup]="addproperity" >
     <div class="mb-3">
       <label for="title"  class="form-label">اسم الاعلان</label>
       <input
