--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 
-<!--
+
 <app-header> </app-header>
 
  <app-side-bar> </app-side-bar>
 
-  <app-footer> </app-footer> -->
+ <router-outlet> </router-outlet>
+  <app-footer> </app-footer>
  <!-- <p>jjjjjjjjjjj</p> -->
 
- <router-outlet> </router-outlet> -->
