--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
  <app-side-bar> </app-side-bar>
 
  <router-outlet> </router-outlet>
-  <app-footer> </app-footer>
+  <!-- <app-footer> </app-footer> -->
  <!-- <p>jjjjjjjjjjj</p> -->
 
