--- a/src/app/components/add-properity/add-properity.component.html
+++ b/src/app/components/add-properity/add-properity.component.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="row mb-3">
-      <div class="col-sm-12 col-md-6">
+      <div class="col-sm-12 col-md-4">
         <label for="price" class="form-label">السعر</label>
         <input type="number" name="price"  formControlName="price"  class="form-control" id="price" />
         <div
@@ -101,7 +101,31 @@
           >
         </div>
       </div>
-      <div class="col-sm-12 col-md-6">
+      <div class="col-sm-12 col-md-4">
+        <label for="bathroomnum" class="form-label">المساحة </label>
+        <input
+        formControlName="area"
+          type="number"
+          name="area"
+          class="form-control"
+          id="bathroom-num"
+        />
+        <div
+        class="alert alert-danger"
+          role="alert"
+          *ngIf="
+          addproperity.controls['area'].errors &&
+          addproperity.controls['area'].touched">
+          <strong
+            *ngIf="addproperity.controls['area'].errors['required']"
+            >برجاء ادخال السعر </strong>
+          <strong
+            *ngIf="addproperity.controls['area'].errors['pattern']"
+            >السعر ارقام فقط</strong
+          >
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4">
         <label for="level" class="form-label">الطابق</label>
         <input type="number" formControlName="level" name="level" class="form-control" id="level" />
         <div
@@ -169,6 +193,9 @@
           >
         </div>
       </div>
+
+
+
       <div class="col-sm-12 col-md-4">
         <label for="bedsnum" class="form-label">عدد السرائر</label>
         <input type="number" formControlName="bedsnum" name="bedsnum" class="beds-num" id="beds-num" />
@@ -188,73 +215,15 @@
         </div>
       </div>
     </div>
+
+
+
+
+
     <div class="row mb-3">
-      <div class="col-sm-12 col-md-4">
-        <label for="bedroom-num" class="form-label">عدد الغرف</label>
-        <input
-        formControlName="bedroomnum"
-          type="number"
-          name="bedroomnum"
-          class="form-control"
-          id="bedroom-num"
-        />
-        <div
-        class="alert alert-danger"
-          role="alert"
-          *ngIf="
-          addproperity.controls['bedroomnum'].errors &&
-          addproperity.controls['bedroomnum'].touched">
-          <strong
-            *ngIf="addproperity.controls['bedroomnum'].errors['required']"
-            >برجاء ادخال السعر </strong>
-          <strong
-            *ngIf="addproperity.controls['bedroomnum'].errors['pattern']"
-            >السعر ارقام فقط</strong
-          >
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4">
-        <label for="bathroomnum" class="form-label">المساحة </label>
-        <input
-        formControlName="area"
-          type="number"
-          name="area"
-          class="form-control"
-          id="bathroom-num"
-        />
-        <div
-        class="alert alert-danger"
-          role="alert"
-          *ngIf="
-          addproperity.controls['area'].errors &&
-          addproperity.controls['area'].touched">
-          <strong
-            *ngIf="addproperity.controls['area'].errors['required']"
-            >برجاء ادخال السعر </strong>
-          <strong
-            *ngIf="addproperity.controls['area'].errors['pattern']"
-            >السعر ارقام فقط</strong
-          >
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-4">
-        <label for="bedsnum" class="form-label">عدد السرائر</label>
-        <input type="number" formControlName="bedsnum" name="bedsnum" class="beds-num" id="beds-num" />
-        <div
-        class="alert alert-danger"
-          role="alert"
-          *ngIf="
-          addproperity.controls['bedsnum'].errors &&
-          addproperity.controls['bedsnum'].touched">
-          <strong
-            *ngIf="addproperity.controls['bedsnum'].errors['required']"
-            >برجاء ادخال السعر </strong>
-          <strong
-            *ngIf="addproperity.controls['bedsnum'].errors['pattern']"
-            >السعر ارقام فقط</strong
-          >
-        </div>
-      </div>
+
+
+
     </div>
 
     <div class="row mt-3 mb-4">
@@ -340,31 +309,7 @@
             style="margin-left: 80px; padding-right: 95px"
           >
           <option disabled selected value>المحافظة</option>
-            <option value="1">القاهرة</option>
-            <option value="2">الاسماعيلية</option>
-            <option value="3">اسوان</option>
-            <option value="4">اسيوط</option>
-            <option value="5">الغردقة</option>
-            <option value="6">دمنهور</option>
-            <option value="7">بنى سويف</option>
-            <option value="8"> بورسعيد</option>
-            <option value="9"> الطور</option>
-            <option value="10"> الجيزة</option>
-            <option value="11"> المنصورة</option>
-            <option value="12"> دمياط</option>
-            <option value="13"> سوهاج</option>
-            <option value="14"> السويس</option>
-            <option value="15"> الزقازيق</option>
-            <option value="16"> العريش</option>
-            <option value="17"> طنطا</option>
-            <option value="18"> الفيوم</option>
-            <option value="19"> بنها</option>
-            <option value="20"> قنا</option>
-            <option value="21"> كفر الشيخ</option>
-            <option value="22"> مرسى مطروح</option>
-            <option value="23"> شبين الكوم</option>
-            <option value="24"> المنيا</option>
-            <option value="25"> الخارجه</option>
+            <option *ngFor="let city of cities" value="{{city.id}}">{{city.name}}</option>
           </select>
           <div
             *ngIf="
@@ -378,6 +323,7 @@
             addproperity.controls['governate'].errors['required']
             "
             >
+            
             الحقل مطلوب</small
             >
           </div>
