--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -31,9 +31,9 @@
 <!-- <img src=""> -->
 <div class="container height">
   <div class="row justify-content-center align-items-center g-0">
-    <div class="col-sm-12 ">
+    <!-- <div class="col-sm-12 ">
       <img class="image" src="assets\real-estate-with-house-model-keys.jpg" alt="">
-    </div>
+    </div> -->
     <div class="col-sm-12 ">
 
       <div class="col-sm-12">
