--- a/src/app/auth/component/register/register.component.html
+++ b/src/app/auth/component/register/register.component.html
@@ -8,7 +8,8 @@
       dir="rtl"
       [formGroup]="registeration"
       >
-      <h1 class="h3 mb-3 fw-normal">انشاء حساب جديد</h1>
+      <h1 class="h1 mb-3 fw-normal text-center text-dark">انشاء حساب جديد</h1>
+      <div class="alert alert-danger text-center" *ngIf="isvalid">برجاء ملئ البيانات اولا</div>
       <div class="form-label-group hov">
         <input
             type="text"
@@ -18,6 +19,7 @@
             placeholder="User name"
             formControlName="firstName"
             autofocus
+
           />
           <label for="inputName">الاسم الاول </label>
           <div
@@ -25,8 +27,8 @@
             role="alert"
             *ngIf="
               registeration.controls['firstName'].errors &&
-              registeration.controls['firstName'].touched&&
-             registeration.controls['firstName'].status
+              registeration.controls['firstName'].touched
+
             "
           >
             <strong
@@ -77,25 +79,25 @@
               registeration.controls['lastName'].errors &&
                 registeration.controls['lastName'].errors['required']
               "
-              >الاسم الاول مطلوب</strong
+              >الاسم الاخير مطلوب</strong
             >
             <strong
               *ngIf="registeration.controls['lastName'].errors['minlength']"
-              >الاسم الاول يجب الا يقل عن حرفان</strong
+              >الاسم الاخير يجب الا يقل عن حرفان</strong
             >
 
             <strong
               *ngIf="registeration.controls['lastName'].errors['maxlength']"
-              >الاسم الاول يجب الا يزيد عن عشرة احرف</strong
+              >الاسم الاخير يجب الا يزيد عن عشرة احرف</strong
             >
             <strong *ngIf="registeration.controls['lastName'].errors['pattern']"
-              >الاسم الاول يجب ان يكون عربى</strong
+              >الاسم الاخير يجب ان يكون عربى</strong
             >
           </div>
         </div>
         <small id="name"></small>
 
-        <div class="form-label-group hov">
+        <div class="form-label-group ">
           <input
             type="email"
             name="email"
@@ -116,7 +118,7 @@
           >
           <strong
           *ngIf="
-                registeration.controls['email'].errors &&
+          registeration.controls['email'].errors &&
                 registeration.controls['email'].errors['required']
               "
               >برجاء ادخال البريد الالكترونى</strong
@@ -127,10 +129,10 @@
 
             <!-- <strong *ngIf=" registeration.controls['email'].errors['pattern']">الاسم الاول يجب ان يكون عربى</strong> -->
           </div>
-          <small  id="email"></small>
+          <small class="text-danger" id="email"></small>
         </div>
 
-        <div class="form-label-group hov">
+        <div class="form-label-group">
           <input
           type="text"
             name="phone"
@@ -145,7 +147,7 @@
             class="alert alert-danger"
             role="alert"
             *ngIf="
-              registeration.controls['phone'].errors
+              registeration.controls['phone'].errors&&registeration.controls['phone'].touched &&!registeration.controls['phone'].pristine
             "
             >
             <strong
@@ -166,7 +168,7 @@
               >ادخل رقما صحيحا</strong
               >
             </div>
-            <strong id="phone"></strong>
+            <small class="text-danger" id="phone"></small>
           </div>
 
           <div class="form-label-group">
@@ -177,6 +179,7 @@
             class="form-control"
             placeholder="Password"
             formControlName="password"
+            autofocus
             />
             <label for="inputPassword">كلمة المرور</label>
             <!-- registeration.controls['password'].touched -->
@@ -188,7 +191,7 @@
             class="alert alert-danger"
             role="alert"
             *ngIf="
-              registeration.controls['password'].errors             "
+              registeration.controls['password'].errors  && registeration.controls['password'].touched           "
           >
             <strong
               *ngIf="
@@ -222,16 +225,16 @@
           <label class="form-label" for="gender" id="gender">النوع</label>
           <select
             formControlName="gender"
-            class="select w-100"
+            class="select w-100 form-control"
             style="margin-left: 80px; padding-right: 95px"
           >
           <option disabled selected value>النوع</option>
             <option value="male">ذكر</option>
             <option value="female">انثى</option>
           </select>
-          <div
+          <div class="alert alert-danger"
             *ngIf="
-              registeration.controls['gender'].errors
+              registeration.controls['gender'].errors&& registeration.controls['gender'].touched
               "
           >
             <small
@@ -249,16 +252,16 @@
           <label class="form-label" for="type" id="type">تسجيل كـ</label>
           <select
           formControlName="type"
-          class="select w-100"
+          class="select w-100 form-control"
           style="margin-left: 80px; padding-right: 95px"
           >
             <option disabled selected value>تسجيل كـ</option>
             <option value="owner">مالك</option>
             <option value="renter">مستاجر</option>
           </select>
-          <div
+          <div class="alert alert-danger"
             *ngIf="
-              registeration.controls['type'].errors
+              registeration.controls['type'].errors && registeration.controls['type'].touched
             "
           >
             <small
@@ -277,7 +280,7 @@
           <button
             class="send form-group col-md-5 w-100 right"
             type="submit"
-            [disabled]="registeration?.invalid"
+
 
             (click)="sign_up()"
           >
@@ -292,7 +295,7 @@
 
       </form>
 
-      {{ registeration.status }}
+      <!-- {{ registeration.status }} -->
       <!-- {{ postData | json }} -->
     </div>
   </div>
